tests/paczka1/fuzzy1/77263986.err
Error in line 6: apg9dr S487 70,5
Error in line 4: ZtYLObL S76 99,8
Error in line 15: apg9dr S490 97,9
Error in line 9: ZtYLObL A71 52,3
Error in line 19: ZtYLObL S76 8,2
Error in line 22: QgC3bihsr2D S490 225,5
Error in line 25: apg9dr S490 62,2
Error in line 36: Cn500tQy S487 14,0
Error in line 39: ZtYLObL A71 26,8
